@@ -1763,6 +1763,171 @@ expr_stmt|;
 block|}
 annotation|@
 name|Test
+DECL|method|testCheckCommitAixCompatMode ()
+specifier|public
+name|void
+name|testCheckCommitAixCompatMode
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|DFSClient
+name|dfsClient
+init|=
+name|Mockito
+operator|.
+name|mock
+argument_list|(
+name|DFSClient
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+name|Nfs3FileAttributes
+name|attr
+init|=
+operator|new
+name|Nfs3FileAttributes
+argument_list|()
+decl_stmt|;
+name|HdfsDataOutputStream
+name|fos
+init|=
+name|Mockito
+operator|.
+name|mock
+argument_list|(
+name|HdfsDataOutputStream
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+comment|// Last argument "true" here to enable AIX compatibility mode.
+name|OpenFileCtx
+name|ctx
+init|=
+operator|new
+name|OpenFileCtx
+argument_list|(
+name|fos
+argument_list|,
+name|attr
+argument_list|,
+literal|"/dumpFilePath"
+argument_list|,
+name|dfsClient
+argument_list|,
+operator|new
+name|IdUserGroup
+argument_list|(
+operator|new
+name|NfsConfiguration
+argument_list|()
+argument_list|)
+argument_list|,
+literal|true
+argument_list|)
+decl_stmt|;
+comment|// Test fall-through to pendingWrites check in the event that commitOffset
+comment|// is greater than the number of bytes we've so far flushed.
+name|Mockito
+operator|.
+name|when
+argument_list|(
+name|fos
+operator|.
+name|getPos
+argument_list|()
+argument_list|)
+operator|.
+name|thenReturn
+argument_list|(
+operator|(
+name|long
+operator|)
+literal|2
+argument_list|)
+expr_stmt|;
+name|COMMIT_STATUS
+name|status
+init|=
+name|ctx
+operator|.
+name|checkCommitInternal
+argument_list|(
+literal|5
+argument_list|,
+literal|null
+argument_list|,
+literal|1
+argument_list|,
+name|attr
+argument_list|,
+literal|false
+argument_list|)
+decl_stmt|;
+name|Assert
+operator|.
+name|assertTrue
+argument_list|(
+name|status
+operator|==
+name|COMMIT_STATUS
+operator|.
+name|COMMIT_FINISHED
+argument_list|)
+expr_stmt|;
+comment|// Test the case when we actually have received more bytes than we're trying
+comment|// to commit.
+name|Mockito
+operator|.
+name|when
+argument_list|(
+name|fos
+operator|.
+name|getPos
+argument_list|()
+argument_list|)
+operator|.
+name|thenReturn
+argument_list|(
+operator|(
+name|long
+operator|)
+literal|10
+argument_list|)
+expr_stmt|;
+name|status
+operator|=
+name|ctx
+operator|.
+name|checkCommitInternal
+argument_list|(
+literal|5
+argument_list|,
+literal|null
+argument_list|,
+literal|1
+argument_list|,
+name|attr
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|assertTrue
+argument_list|(
+name|status
+operator|==
+name|COMMIT_STATUS
+operator|.
+name|COMMIT_DO_SYNC
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
 comment|// Validate all the commit check return codes OpenFileCtx.COMMIT_STATUS, which
 comment|// includes COMMIT_FINISHED, COMMIT_WAIT, COMMIT_INACTIVE_CTX,
 comment|// COMMIT_INACTIVE_WITH_PENDING_WRITE, COMMIT_ERROR, and COMMIT_DO_SYNC.
@@ -1877,6 +2042,8 @@ name|config
 argument_list|)
 argument_list|,
 name|config
+argument_list|,
+literal|false
 argument_list|)
 decl_stmt|;
 name|assertTrue
