@@ -673,6 +673,9 @@ Release 2.5.0 - UNRELEASED
     HDFS-3848. A Bug in recoverLeaseInternal method of FSNameSystem class
     (Hooman Peiro Sajjad  and Chen He via kihwal)
 
+    HDFS-6549. Add support for accessing the NFS gateway from the AIX NFS
+    client. (atm)
+
   BREAKDOWN OF HDFS-2006 SUBTASKS AND RELATED JIRAS
 
     HDFS-6299. Protobuf for XAttr and client-side implementation. (Yi Liu via umamahesh)
